--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
-{% block title %}Notes App{% endblock %}
+{% block title %}Home{% endblock %}
 
-{% block content %}<h1>This is my Home page</h1>{% endblock %}
+{% block content %}<h1>This is the Home page</h1>{% endblock %}
