--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -17,7 +17,7 @@
             <input type="password" id="password1" class="form-control" name="password1" placeholder="Enter Password" />
         </div>
         <div class="form-group">
-            <label for="password2">Password</label>
+            <label for="password2">Confirm Password</label>
             <input type="password" id="password2" class="form-control" name="password2" placeholder="Confirm Password" />
         </div>
         <br />
